# CompMatch

./: LICENSE  README.md
CalMse/: .gitignore  CMakeLists.txt  README.md  main.cpp
CompMatch/: .gitignore  CMakeLists.txt  README.md  main.cpp
CompMatch/include/: cm_affine.hpp  cm_comp_data.hpp  cm_csv.hpp  cm_error_code.hpp  cm_file.hpp  cm_halcon.hpp  cm_intrinsics.hpp  cm_match.hpp  cm_match_ball.hpp  cm_match_box.hpp  cm_match_lead.hpp  cm_svg.hpp  cm_utils.hpp
CompMatch/sources/: cm_comp_data.cpp  cm_match.cpp  cm_match_ball.cpp  cm_match_box.cpp  cm_match_lead.cpp
HalconNCC/: .gitignore  README.md  main.cpp
HalconNCC/include/: cm_comp_data.hpp  cm_halcon.hpp  cm_match.hpp  cm_match_ball.hpp  cm_match_box.hpp  cm_match_lead.hpp
HalconNCC/sources/: cm_match.cpp  cm_match_ball.cpp  cm_match_box.cpp  cm_match_lead.cpp
HalconSHM/: CMakeLists.txt  README.md  main.cpp
HalconSHM/cmake/: SmartSMFindJson.cmake
HalconSHM/include/: cm_comp_data.hpp  cm_error_code.hpp  cm_halcon.hpp  cm_match_ball.hpp  cm_match_box.hpp  cm_match_lead.hpp  cm_svg.hpp
HalconSHM/sources/: cm_comp_data.cpp  cm_match.cpp  cm_match_ball.cpp  cm_match_box.cpp  cm_match_lead.cpp
PoseMatch-TDCM/: README.md  test_cm.py
YoloObb/: README.md  test.py  train_dl1.py
YoloObb/cfg/: data_dl1.yaml
